[gd_scene load_steps=16 format=3 uid="uid://dvpp2jwyv8806"]

[ext_resource type="Script" uid="uid://c58hhi4lia3w" path="res://scripts/enemies/drone/drone_dive_impact.gd" id="1_b37mp"]
[ext_resource type="Texture2D" uid="uid://cxd6hv2slvcv6" path="res://assets/3D/Particles/dust/dust_color.png" id="2_apby3"]
[ext_resource type="Texture2D" uid="uid://bxkwkkirfpcy8" path="res://assets/3D/Particles/dust/dust_fuzzy_color.png" id="3_6fykj"]
[ext_resource type="Texture2D" uid="uid://k7jwo1rrexr6" path="res://assets/3D/Enemies/Drone/Impact/impact_color.png" id="4_dkiyc"]
[ext_resource type="Texture2D" uid="uid://1rqi1ej4l713" path="res://assets/3D/Enemies/Drone/Impact/impact_normal.png" id="5_dhddi"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vv3ce"]
direction = Vector3(0, 1, 0)
initial_velocity_min = 2.0
initial_velocity_max = 8.0
gravity = Vector3(0, -12, 0)
radial_accel_min = -4.0000024
radial_accel_max = -2.0000021
anim_offset_max = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6fykj"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("2_apby3")
backlight_enabled = true
backlight = Color(1, 1, 1, 1)
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_b37mp"]
material = SubResource("StandardMaterial3D_6fykj")
size = Vector2(0.2, 0.2)

[sub_resource type="Curve" id="Curve_dkiyc"]
_data = [Vector2(0.008710802, 0.99808776), 0.0, 0.0, 0, 0, Vector2(0.6062718, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_dhddi"]
curve = SubResource("Curve_dkiyc")

[sub_resource type="Gradient" id="Gradient_dkiyc"]
offsets = PackedFloat32Array(0, 0.64615387, 1)
colors = PackedColorArray(0.3538325, 0.21160424, 0.10256722, 1, 0.35, 0.20918334, 0.101500005, 0, 0.35, 0.20918334, 0.101500005, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dhddi"]
gradient = SubResource("Gradient_dkiyc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6fykj"]
direction = Vector3(0, 1, 0)
spread = 75.0
initial_velocity_min = 2.0
initial_velocity_max = 6.0
gravity = Vector3(0, -7, 0)
radial_accel_min = -5.000002
radial_accel_max = -3.0000021
scale_min = 0.29999998
color_ramp = SubResource("GradientTexture1D_dhddi")
alpha_curve = SubResource("CurveTexture_dhddi")
anim_offset_max = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lc7o7"]
transparency = 1
no_depth_test = true
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_6fykj")
backlight_enabled = true
backlight = Color(0.6610811, 0.66108096, 0.66108096, 1)
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_dkiyc"]
material = SubResource("StandardMaterial3D_lc7o7")
size = Vector2(2, 2)

[node name="DroneDiveImpact" type="Node3D"]
script = ExtResource("1_b37mp")

[node name="DustParticles" type="GPUParticles3D" parent="."]
layers = 2
amount = 80
lifetime = 3.0
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_vv3ce")
draw_pass_1 = SubResource("QuadMesh_b37mp")

[node name="FuzzyParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3080349, 0)
layers = 2
amount = 40
lifetime = 2.0
explosiveness = 1.0
local_coords = true
process_material = SubResource("ParticleProcessMaterial_6fykj")
draw_pass_1 = SubResource("QuadMesh_dkiyc")

[node name="CraterDecal" type="Decal" parent="."]
size = Vector3(4.5, 0.2, 4.5)
texture_albedo = ExtResource("4_dkiyc")
texture_normal = ExtResource("5_dhddi")
upper_fade = 0.1
lower_fade = 0.1
cull_mask = 1

[connection signal="finished" from="DustParticles" to="." method="_on_dust_particles_finished"]
[connection signal="finished" from="FuzzyParticles" to="." method="_on_fuzzy_particles_finished"]
